# tech-tree

./: LICENSE  README.md
backend/: Cargo.toml
backend/src/: analyzer.rs  api.rs  cache.rs  lib.rs  main.rs  semantic_analyzer.rs  types.rs  wikipedia.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  config.ts  types.ts
frontend/src/components/: PrincipleDetails.tsx  SearchInterface.tsx  TreeVisualization.tsx
frontend/src/services/: api.ts
frontend/src/utils/: dataTransform.ts
